<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLogin">

    <ImageView
        android:id="@+id/imageLogoCadastro"
        android:layout_width="244dp"
        android:layout_height="178dp"
        android:layout_marginTop="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/instocklogo" />

    <TextView
        android:id="@+id/TextLoginBLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoCadastro" />

    <TextView
        android:id="@+id/textView_DigiteEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/digite_seu_e_mail"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLoginBLogo" />

    <EditText
        android:id="@+id/editTextTextEmail_Input"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DigiteEmail"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView_DigiteSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/digite_a_sua_senha"
        android:textColor="#000000"
        android:textStyle="bold"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail_Input" />

    <EditText
        android:id="@+id/editText_Senha"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DigiteSenha"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBox_LembrarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lembrar_senha"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Senha"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7_EsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="338dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/esqueci_a_minha_senha"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/checkBox_LembrarSenha"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_Entrar"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="#0C5598"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_Cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Cadastrar"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="#FFFFFF"
        android:padding="10dp"
        android:text="@string/cadastrar"
        android:textColor="#0C5598"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/button_Entrar"
        app:strokeColor="#0C5598"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButtonGoogle"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="88dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonFacebook"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/google_teste" />

    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="99dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="88dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonGoogle"
        app:srcCompat="@drawable/teste" />

</androidx.constraintlayout.widget.ConstraintLayout>
